samples/_failures_safe/1761177841_67632d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e66534e6.c: In function ‘main’:
./samples/SAFE/__tmp_e66534e6.c:131:90: error: expected ‘)’ at end of input
  131 |     if (decompressed_size == input_len && memcmp(input_data, decompressed_data, input_len
      |                                                 ~                                        ^
      |                                                                                          )
./samples/SAFE/__tmp_e66534e6.c:131:5: error: expected declaration or statement at end of input
  131 |     if (decompressed_size == input_len && memcmp(input_data, decompressed_data, input_len
      |     ^~
